# cpp_personal_website

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  main.cpp  notes.txt  requirements.txt  test.cgi
app/css/: main.css
app/html/: about.html  contacts.html  footer.html  head.html  header.html  index2.html  test.html
app/html/ru/: about.html  contacts.html  header.html  index.html  projects.html
configs/: config.jsonc
include/: responses.h  utils.h
vcpkg_install/: install.cmd  install.sh
